...
@Composable
fun FirstNameTextField(newFirstName: MutableState<String>) {
  OutlinedTextField(
      value = newFirstName.value,
      onValueChange = { newFirstName.value = User.formatName(it) },
      label = { Text(stringResource(R.string.first_name)) },
      modifier = Modifier.fillMaxWidth(0.8f).padding(vertical = 12.dp).testTag("inputFirstName"))
}

/**
 * A composable function that creates an OutlinedTextField for entering the user name.
 *
 * @param newUserName A MutableState object that holds the value of the user name.
...
fun UserNameTextField(newUserName: MutableState<String>, userNameError: MutableState<Boolean>) {
  OutlinedTextField(
      value = newUserName.value,
      onValueChange = { newUserName.value = User.formatUsername(it) },
      label = { Text(stringResource(R.string.user_name)) },
      isError = userNameError.value,
      modifier = Modifier.fillMaxWidth(0.8f).padding(vertical = 12.dp).testTag("inputUserName"))
}

/**
 * A composable function that creates an OutlinedTextField for entering the last name.
 *
 * @param newLastName A MutableState object that holds the value of the last name.
...
@Composable
fun LastNameTextField(newLastName: MutableState<String>) {
  OutlinedTextField(
      value = newLastName.value,
      onValueChange = { newLastName.value = User.formatName(it) },
      label = { Text(stringResource(R.string.last_name)) },
      modifier = Modifier.fillMaxWidth(0.8f).padding(vertical = 12.dp).testTag("inputLastName"))
}

/**
 * A composable function that creates a Button for saving the user information.
 *
 * @param onClick A lambda function to be executed when the button is clicked.
 * @param enabled A MutableState object that indicates whether the button is enabled.
 */
@Composable
fun SaveButton(onClick: () -> Unit, enabled: MutableState<Boolean>) {
  Button(
      onClick = onClick,
      modifier = Modifier.fillMaxWidth(0.8f).padding(vertical = 16.dp).testTag("saveButton"),
      enabled = enabled.value) {
        Text(stringResource(R.string.save))
      }
}

