...
                          unfocusedBorderColor = MaterialTheme.colorScheme.onBackground,
                          focusedTextColor = MaterialTheme.colorScheme.onBackground,
                          unfocusedTextColor = MaterialTheme.colorScheme.onBackground),
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(top = 16.dp, start = 16.dp, end = 16.dp)
                          .testTag("searchTextField"))
              LazyRow(
                  modifier = Modifier.fillMaxWidth().padding(vertical = 6.dp, horizontal = 20.dp)) {
                    item {
                      FilterChip(
                          searchType.value == SearchType.USERS,
                          label = { Text(stringResource(R.string.users_maj), maxLines = 1) },
...
                                    tint = MaterialTheme.colorScheme.onBackground)
                          },
                          colors =
                              FilterChipDefaults.filterChipColors(
                                  selectedContainerColor =
                                      MaterialTheme.colorScheme.primaryContainer),
                          modifier = Modifier.padding(horizontal = 5.dp).testTag("userFilterChip"))
                    }
                    item {
                      FilterChip(
                          searchType.value == SearchType.NOTES,
                          label = { Text(stringResource(R.string.notes_maj), maxLines = 1) },
                          onClick = {
...
              }
        }

        if (displayUsers) {
          LazyColumn(
              contentPadding = PaddingValues(horizontal = 16.dp),
              modifier = Modifier.fillMaxWidth().padding(padding).testTag("filteredUserList")) {
                items(filteredUsers.value.size) { index ->
                  val userState = remember { derivedStateOf { filteredUsers.value[index] } }
                  UserItem(
                      userState,
                      userViewModel,
                      fileViewModel,
...
              }
          Text(
              modifier =
                  Modifier.padding(padding)
                      .fillMaxWidth()
                      .padding(24.dp)
                      .testTag("noSearchResults"),
              text = stringResource(R.string.not_found_search, searchedText),
              textAlign = TextAlign.Center,
              color = MaterialTheme.colorScheme.onBackground)
        }
      }
}
...
