...
                        Visibility.entries.lastIndex
                      }
                  pagerState.animateScrollToPage(previousPage)
                  onVisibilityChange(Visibility.entries[previousPage])
                }
              },
              modifier = Modifier.testTag("previousVisibility")) {
                Icon(
                    imageVector = Icons.Default.ChevronLeft,
                    contentDescription = "Previous Visibility")
              }
        }

...
            userScrollEnabled = isOwner,
            state = pagerState,
            modifier = Modifier.weight(1f).testTag("visibilityPager").fillMaxWidth()) { page ->
              val targetVisibility = Visibility.entries[page]
              Column(
                  horizontalAlignment = Alignment.CenterHorizontally,
                  modifier = Modifier.testTag("currentVisibilityOption").fillMaxWidth()) {
                    Icon(
                        imageVector = getVisibilityIcon(targetVisibility),
                        contentDescription = targetVisibility.toReadableString(),
                        modifier = Modifier.padding(8.dp))
                    Text(
                        text = targetVisibility.toReadableString(),
...
                        0
                      }
                  pagerState.animateScrollToPage(nextPage)
                  onVisibilityChange(Visibility.entries[nextPage])
                }
              },
              modifier = Modifier.testTag("nextVisibility")) {
                Icon(
                    imageVector = Icons.Default.ChevronRight,
                    contentDescription = "Next Visibility")
              }
        }
      }
...
