...
                Spacer(modifier = Modifier.weight(2f))
              }
            }
      },
      navigationIcon = {
        IconButton(
            modifier = Modifier.testTag("closeButton"),
            onClick = {
              // Check if any fields were modified
              if (isModified) {
                showDiscardChangesDialog = true
              } else {
                navigationActions.goBack()
...
    Text(text = "Title", style = MaterialTheme.typography.titleMedium)
    NoteDataTextField(
        value = noteTitle,
        onValueChange = { onNoteTitleChange(Note.formatTitle(it)) },
        label = "",
        placeholder = "Enter the new title here",
        modifier = Modifier.fillMaxWidth().testTag("EditTitle textField"),
        enabled = note.isOwner(currentUserId),
        trailingIcon = {
          IconButton(onClick = { onNoteTitleChange("") }, enabled = isEnabled) {
            Icon(Icons.Outlined.Clear, contentDescription = "Clear Title")
          }
        })
...
                userId = note.userId,
                folderId = note.folderId,
                comments = note.comments))
        noteViewModel.getNoteById(note.id, useCache = true)
        Toast.makeText(context, "Note saved", Toast.LENGTH_SHORT).show()
      },
      modifier = Modifier.testTag("saveNoteButton")) {
        Icon(
            imageVector = Icons.Default.Check,
            contentDescription = "Save Note",
            tint = MaterialTheme.colorScheme.onSurface)
      }
}
...
